# jaxqtl

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  install_r.sh  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
example/: QC.ipynb  eQTL_mapping.ipynb
example/data/: B_IN.libsize.tsv  CD4_ET.libsize.tsv  CD4_NC.libsize.tsv  CD4_SOX4.libsize.tsv  ENSG00000178607_rs74787440.nb.scoretest.tsv  ENSG00000178607_rs74787440_Rres.tsv  NK_covar_libsize.tsv  celltype.tsv  chr22.fam  chr22.n94.IID  chr22.n94.bed  chr22.n94.fam  chr22.numvar  donor_features.n94.tsv  donor_features.tsv  genelist.tsv  genelist_chr22.tsv  genelist_spatest.tsv  n94_wald_scoretest_pois_Rres.tsv  onek1k.bed  sim_chr1.bed  sim_chr1.bim  sim_chr1.fam  sim_chr1_cis_region.txt  spector.tsv  spector_offset.tsv  spector_scoretest_bin_Rres.tsv  spector_scoretest_pois_Rres.tsv
example/data/NK/: chr3.fam  chr3_ENSG00000177463  chr3_ENSG00000228242_good  chr3_ENSG00000268279_lowcount
example/helper/: PEER.r  plink_get_genoPC.sh
src/jaxqtl/: __init__.py  cli.py  log.py  map.py  sim.py  sim_sc.py  skeleton.py
src/jaxqtl/data/: onek1k.fam  onek1k.nosex
src/jaxqtl/families/: __init__.py  distribution.py  links.py  utils.py
src/jaxqtl/infer/: __init__.py  distribution.py  glm.py  glm_wrapper.py  infer_test.py  optimize.py  permutation.py  solve.py  stderr.py  utils.py
src/jaxqtl/infer/families/: distribution.py  links.py
src/jaxqtl/io/: __init__.py  covar.py  expr.py  geno.py  pheno.py  readfile.py
src/jaxqtl/load/: readfile.py
src/jaxqtl/map/: __init__.py  cis.py  nominal.py  utils.py
src/jaxqtl/misc/: 1_prepare_tqtl_covar.py  cli.py  git_help.txt  jaxqtl_cis.py
src/jaxqtl/post/: qvalue.py  rfunc.py
src/jaxqtl/sim/: sim.py  test_sim.py
tests/: check_NB.py  conftest.py  enrich_annot_sm.py  mantest.py  test_cis.py  test_cli.sh  test_covar.py  test_infer.py  test_io.py  test_map.py  test_perm.py  test_readfile.py  test_run_bigGLM.py  test_sim.py  test_sim_bulk.py  test_sim_sc.py  test_skeleton.py  test_trans.py  try_cov_g.py  util.py  utils.py
tests/data/: onek1k.fam  onek1kpca.eigenvec
tutorial/code/: run_jaxqtl_cis.sh  run_jaxqtl_nominal.sh
tutorial/input/: chr22.bed  chr22.bim  chr22.fam  donor_features.all.6PC.tsv  genelist_10  iid
tutorial/output/: CD4_NC_chr22_genelist_10_jaxqtl_NB.cis_qtl_pairs.22.wald.parquet
